<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aaroncomo.escape.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.aaroncomo.escape.ui.gallery.GalleryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_inpainting"
        android:name="com.aaroncomo.escape.ui.inpainting.InpaintingFragment"
        android:label="@string/title_inpainting"
        tools:layout="@layout/fragment_inpainting" />
</navigation>