<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_neutral_variant90"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
                app:layout_collapseMode="pin"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/inpainting"
                app:title="@string/title_inpainting" />

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="-100dp"
                android:layout_marginBottom="400dp"
                android:background="@color/material_dynamic_neutral_variant95"
                app:cardCornerRadius="100dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/inpainting_card"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <!-- Media -->
                    <com.google.android.material.card.MaterialCardView
                        style="?attr/materialCardViewFilledStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="?attr/colorPrimary"
                        app:cardCornerRadius="20dp">

                        <ImageView
                            android:id="@+id/picture"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop" />
                    </com.google.android.material.card.MaterialCardView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:orientation="vertical"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <!-- Title, secondary and supporting text -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/status_title"
                                android:textAppearance="?attr/textAppearanceTitleLarge"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/hint"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="2dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/status"
                                android:textAppearance="?attr/textAppearanceBodyMedium"
                                android:textColor="?android:attr/textColorSecondary"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="15dp"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent">


                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                android:id="@+id/menu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:hint="@string/option"
                                android:inputType="none"
                                android:textAppearance="?attr/textAppearanceBodySmall"
                                android:textStyle="bold" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/select_picture"
                            style="@style/Widget.Material3.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/select_img" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/save_picture"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save_img" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginVertical="30dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            app:backgroundTint="?attr/colorPrimary"
            app:icon="@drawable/triangle_start_icon"
            app:iconTint="?attr/colorOnPrimary" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="?attr/colorPrimary"
            app:indicatorSize="90dp"
            app:showDelay="@integer/material_motion_duration_medium_1"
            app:trackCornerRadius="15dp"
            app:trackThickness="4dp" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        style="@style/Widget.Material3.BottomSheet.Modal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Drag handle for accessibility -->
            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:spanCount="1" />
        </LinearLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>